methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:14: error: not found: value growFlowersEx
  growFlowersEx()
  ^FlowerCase:25: error: not found: value growFlowersEx
  growFlowersEx()
  ^