methods.flowerpot.FlowerCase.scala.code
def growFlowers(){
  growFlowersINT()
  droite()
  avance()
  droite()
  avance(9)
  left()
  avance(3)
  left()
  growFlowersINT
}

def growFlowersINT(){
  growFlowersEx()
  avance(5)
  left()
  avance(2)
  droite()
  avance()
  Fleur(Color.BLUE)
  avance()
  left()
  avance(2)
  droite()
  growFlowersEx()
}
def growFlowersBASE(){
  avance()
  Fleur(Color.RED)
  avance(4)
  Fleur(Color.CYAN)
  droite()
  avance(2)
  droite()
  avance(2)
  Fleur(Color.ORANGE)
  left()
  avance(2)
  left()
  avance(2)
  Fleur(Color.GREEN)
  recule(4)
  Fleur(Color.PINK)
}

def dessine(){
  baisseBrosse()
  leveBrosse()
}

def Fleur(c:Color){
  setCouleurBrosse(Color.YELLOW)
  dessine()
  setCouleurBrosse(c)
  for(i <- 1 to 4){
    avance()
    dessine()
    recule()
    left()
  }
}